Make CORS allowed origins configurable via environment variable
Hardcoded localhost-only CORS blocked browser requests from the
production domain, causing 403 Invalid CORS request on every API call.
Origins are now read from CORS_ALLOWED_ORIGINS env var (comma-separated),
defaulting to http://localhost:* for local dev.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>